# moas

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: assembly.rs  atoms.rs  attachment.rs  graph.rs  main.rs  prelude.rs  statistics.rs  weisfeiler_lehman.rs
src/assembly/: bitset.rs  context.rs  interface.rs  mod.rs  old-interface.rs  run.rs  state.rs  test.rs  tree_statistics.rs
src/attachment/: graph.rs  interface.rs  mapping.rs  mod.rs  perform.rs  result.rs  test.rs
src/extra/: mod.rs  similar.rs
src/generator/: dna_esque.rs  mod.rs
src/isomorphism/: bitset.rs  fast.rs  mod.rs  slow.rs  wl.rs
src/subgraphs/: base_case.rs  bench.rs  complex.rs  count.rs  iteration.rs  mod.rs  test.rs  trait.rs
src/subgraphs/variants/: mod.rs  only4.rs  only7.rs  with_rings.rs  with_rings5.rs
