[package]
name = "moas"
version = "0.1.0"
authors = ["Marvin Böcker <marvin.boecker@tu-dortmund.de>"]
edition = "2018"

[dependencies]
rusqlite = { version = "0.18.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8"
rand = "0.7"
lazy_static = "1.4.0"
chrono = "0.4.9"
rayon = { version = "1.2", optional = true }

[profile.release]
debug = true

[profile.bench]
debug = true

[features]
default = []
parallel = ["rayon"]